# multi-agent-architecture

./: .gitignore  AGENTS.md  README.md  pyrightconfig.json
code/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
code/notebooks/: README.md
code/notebooks/patterns/ablauf/: evaluator-optimizer.ipynb  iterative-refinement.ipynb  loop.ipynb  map-reduce.ipynb  orchestrator-workers.ipynb  parallelization-sectioning.ipynb  parallelization-voting.ipynb  routing.ipynb  sequential-pipeline.ipynb
code/notebooks/patterns/denken/: codeact.ipynb  plan-and-execute.ipynb  react.ipynb  reflexion.ipynb  rewoo.ipynb  self-consistency.ipynb  tree-of-thoughts.ipynb
code/notebooks/patterns/systembetrieb/: actor-model.ipynb  adapter-pattern.ipynb  audit-trail.ipynb  capability-routing.ipynb  checkpointing-resumability.ipynb  compressed-context-memory.ipynb  conversational-memory.ipynb  distributed-tracing.ipynb  episodic-memory.ipynb  event-driven-choreography.ipynb  function-calling.ipynb  graph-memory.ipynb  human-in-the-loop-approval-gate.ipynb  integration-tests-for-agents.ipynb  least-privilege-agent.ipynb  llm-as-judge.ipynb  mcp.ipynb  multimodal-guardrails.ipynb  output-validation-schema-enforcement.ipynb  permission-scoped-tools.ipynb  semantic-memory.ipynb  (+8 more)
code/notebooks/reference-architectures/: browser-use-agent.ipynb  coding-agent.ipynb  document-pipeline.ipynb  research-assistant.ipynb  supervisor-multi-agent.ipynb  support-triage.ipynb
code/src/: README.md
code/src/ai_agent_patterns/: README.md  __init__.py  cli.py  config.py  llm.py  tools.py
(+189 files in other folders)
